fix dropdown when into a collapsed navbar

--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -2722,7 +2722,7 @@ input[type="button"].btn-block {
 }
 
 .dropdown-menu {
-  position: absolute;
+  position: relative;
   top: 100%;
   left: 0;
   z-index: 1000;
@@ -2906,6 +2906,12 @@ input[type="button"].btn-block {
 
 .typeahead {
   z-index: 1051;
+}
+
+@media screen and (min-width: 768px) {
+  .dropdown-menu {
+    position: absolute;
+  }
 }
 
 .list-group {
